# KG_project

./: .gitignore  PROJECT_REPORT.md  README.md  pyproject.toml  test.txt  train.txt
src/kg_factcheck/: __init__.py  cli.py  data.py  features.py  model.py  output.py  sparql.py
tests/: test_data_output.py  test_model.py
