[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-factcheck"
version = "0.1.0"
description = "A reproducible fact-checking engine for the Knowledge Graphs mini-project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "KG Project Team" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
kg-factcheck = "kg_factcheck.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

